--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -13,38 +12,69 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+			<section class="hero">
+				<div class="heading-container">
+					<h1>Andrew's Design Hub</h1>
+					<p>📍Based in New Orleans | Design & Code @ 
+						<a href="https://www.ndgcommunications.com/" target="_blank">NDG Communications</a>
+					</p>
+				</div>
+				<img src="../../src/assets/images/home-heading.jpg" alt="Andrew's Design Hub" />
+			</section>
+			<section class="bio-section">
+				<div class="copy-container">
+					<p class="heading">Designer / Developer / Design Systems Enthusiast</p>
+					<p class="copy">Hi, I'm Andrew. I work with companies to bridge the gap between design and development, write CSS, and to build cool things in the browser.</p>
+				</div>
+			</section>
+			<section>
+				<h2>A Small Selection of my Work</h2>
+			</section>
 		</main>
-		<Footer />
 	</body>
 </html>
+
+<style>
+	.hero {
+		align-items: center;
+		display: flex;
+		gap: 4rem;
+		margin: 4rem 0;
+		& h1 {
+			margin-bottom: 1.5rem;
+		}
+		& p {
+			font-size: 1.7rem;
+		}
+		& img {
+			max-width: 35%;
+			height: auto;
+			border-radius: 25px;
+			opacity: 0.75;
+			box-shadow: var(--global-box-shadow);
+		}
+	}
+	section {
+		margin: 16rem 0;
+		& h2 {
+			text-align: center;
+		}
+	}
+
+	.bio-section {
+		display: flex;
+		place-content: center;
+		& .copy-container {
+			display: flex;
+			justify-content: space-evenly;
+			width: 60%;
+		}
+		& .heading {
+			font-size: 1.7rem;
+			width: 100%;
+		}
+		& .copy {
+			font-size: 1.3rem;
+		}
+	}
+</style>
