--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
 :root {
 	--color-black: #0f0f0f;
 	--color-white: #f0f0f0;
+	--color-grey-lightest: #d3d3d3;
 	--color-surface_base: #F3F3F3;
 	--global-box-shadow: 1px 1px 30px 1px #0000005e;
 }
