initial modal implementation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<h2>A Small Selection of my Work</h2>
 				<div class="case-study-container">
 					<CaseStudy 
+					client:idle
 					title="NOLA Transit UI Overhaul"
 					assetSrc="src/assets/images/case-studies/nola-transit/nola-transit.webm"
 					/>
