thumbnail styling work

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,6 +97,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	.case-study-container {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
+		margin: 2rem 0;
 	}
 
 </style>
