case study styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					<CaseStudy 
 					client:idle
 					title="NOLA Transit UI Overhaul"
-					assetSrc="src/assets/images/case-studies/nola-transit/nola-transit.webm"
+					thumbnailAssetSrc="src/assets/images/case-studies/nola-transit/nola-transit.webm"
+					copy="The NOLA Transit app, a volunteer initiative by Code for America New Orleans, provides real-time tracking of buses and streetcars for New Orleanians. This essential feature, previously part of the official city-owned public transit app, was omitted in the launch of their redesigned app Le Pass, prompting community volunteers to create this open-source web app. My role involved refactoring the front-end and redesigning the UI to prioritize mobile users."
+					ctaCopy="View Site"
+					ctaUrl="https://nolatransit.fly.dev/"
+					ctaCopyTwo='Read More'
 					/>
 				</div>
 			</section>
