--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,7 @@
 	--color-black: #0f0f0f;
 	--color-white: #f0f0f0;
 	--color-primary: #531CB3;
+	--color-primary-darker: #42188b;
 	--color-grey-lightest: #d3d3d3;
 	--color-surface_base: #F3F3F3;
 	--global-box-shadow: 1px 1px 30px 1px #0000005e;
@@ -68,6 +69,9 @@ a {
 dialog {
 	max-width: 60vw;
 	border-radius: 2rem;
+	background-color: var(--color-white);
+	overflow-x: hidden;
+	scrollbar-width: thin;
 	&::backdrop {
 		background-color: rgba(0, 4, 23, 0.8);
 	}
