--- a/src/styles/components/case-study.scss
+++ b/src/styles/components/case-study.scss
@@ -2,10 +2,6 @@
     position: relative;
     transition: all 0.4s;
     &:hover {
-        .title {
-            opacity: 1;
-            transition: all 0.4s;
-        }
         .expand-icon {
             opacity: 1;
             transition: all 0.4s;
@@ -28,25 +24,6 @@
         background-color: var(--color-primary);
         border-radius: 50%;
         padding-bottom: 0.2rem;
-    }
-    .title {
-        background: var(--color-black);
-        border-radius: 4px;
-        width: fit-content;
-        display: flex;
-        flex-direction: column;
-        gap: 0.75rem;
-        position: absolute;
-        inset: 0;
-        opacity: 0;
-        padding: 0.75rem;
-        color: var(--color-white);
-        margin: auto;
-        text-align: center;
-        height: fit-content;
-        transition: all 0.4s;
-        z-index: var(--z-index-case-study-thumbnail);
-        font-size: 1.3rem;
     }
     .thumbnail-container {
         z-index: 1000;
@@ -73,7 +50,12 @@
             }    
         }
     }
-
+    .title {
+        color: var(--color-black);
+        font-size: 1.3rem;
+        text-align: center;
+        margin-top: 1rem;
+    }
     .close-button {
         font-size: 1.3rem;
         font-weight: 800;
@@ -114,6 +96,14 @@
 
     dialog[open] {
         animation: animateIn 0.5s ease-out normal;
+    }
+
+    @include tabletDown {
+        dialog {
+            .copy-container {
+                padding: 1.5rem;
+            }
+        }
     }
     @keyframes animateIn {
         from {
