--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -27,7 +27,7 @@ button {
     color: var(--color-black);
     padding: 0.5rem 1rem;
     border-radius: 8px;
-    border: solid 2px var(--color-black);
+    border: solid 3px var(--color-black);
     transition: all 0.2s;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -46,6 +46,9 @@ button {
 }
 
 @include mobileOnly {
+    .btn-primary, .btn-secondary, .btn-disabled {
+        font-size: 1rem;
+    }
     .button-group {
         flex-direction: column;
         gap: 1.25rem;
