--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import HeroImage from "../assets/images/home-heading.jpg";
 import { Image } from 'astro:assets';
 import NolaTransitCaseStudyVideo from "../assets/images/case-studies/nola-transit/nola-transit.webm";
 import TorshDesignSystemCaseStudyVideo from "../assets/images/case-studies/torsh-design-system/torsh-design-system-promo.webm";
+import DRBAgentPortalCaseStudyVideo from "../assets/images/case-studies/drb-agent-portal/drb-agent-portal.webm";
+import LegendUiCaseStudyVideo from "../assets/images/case-studies/legend-homes/fyh-ui.webm";
+import TabletRefactorVideo from "../assets/images/case-studies/epcon/tablet-refactor.webm";
 import Footer from '../components/Footer.astro';
+import RecordCollection from '../components/record-collection.astro';
 ---
 
 <!doctype html>
@@ -30,12 +34,12 @@ import Footer from '../components/Footer.astro';
 			<section class="bio-section">
 				<div class="copy-container">
 					<p class="heading">Designer / Developer / Design Systems Enthusiast</p>
-					<p class="copy">Hi, I'm Andrew. I work with companies to bridge the gap between design and development, write CSS, and to build cool things in the browser.</p>
+					<p class="copy">Heya, I'm Andrew. I work with companies to bridge the gap between design and development, write CSS (my fav), and to build cool things in the browser.</p>
 				</div>
 			</section>
 			<section>
-				<h2>A Small Selection of my Work</h2>
-				<p>Just a small selection of work from over the years. Click on any of them to learn more!</p>
+				<h2>What Have I Been Working On?</h2>
+				<p>Glad you asked! Click on any of them to learn more!</p>
 				<div class="case-study-container">
 					<CaseStudy 
 						client:idle
@@ -47,6 +51,26 @@ import Footer from '../components/Footer.astro';
 						ctaCopyTwo='Read More'
 					/>
 					<CaseStudy 
+					client:idle
+					title="Kiosk Touchscreen to Tablet Refactor"
+					thumbnailAssetSrc={TabletRefactorVideo}
+					copy="A large national home builder client had a sales center kiosk web app designed for stationary 4K touchscreens but wanted the ability to hand sales staff a tablet they could use to interact with homebuyers. I jumped into the code to take a kiosk site designed specifically for HD TVs and implement a delightful user experience when the sales kiosk was viewed on a tablet. By the end of the project, the kiosk served a dual purpose of serving as a stationary sales kiosk and a mobile iPad guide for the floor staff."
+					/>
+					<CaseStudy 
+						client:idle
+						title="Realtor Portal Dashboard Design"
+						thumbnailAssetSrc={DRBAgentPortalCaseStudyVideo}
+						copy="I designed and helped develop the front-end UI for a real estate agent dashboard integrated into a large national homebuilder's consumer-facing website. Because of the results of a lawsuit and legislation passed in 2024, real estate agents are no longer obligated to a standard and fixed commission after selling a home. This dashboard provides agents with the resources to organize leads and strategically pick homes for sale that will offer them the best commissions and incentives to make a sale."
+					/>
+					<CaseStudy 
+						client:idle
+						title="Home Search Page UI Development"
+						thumbnailAssetSrc={LegendUiCaseStudyVideo}
+						copy="I took the lead in developing the UI for the primary home search page for a homebuilder client based in Texas. The original provided designs were set to a 1920x1080 resolution so several on the fly tweaks and modifications had to be made to accommodate responsive for devices where the majority of users browse from, namely, mobile phones and smaller desktops. This site is an Angular application under the hood."
+						ctaCopy='Visit Site'
+						ctaUrl='https://www.livelegendhomes.com/communities'
+					/>
+					<CaseStudy 
 						client:idle
 						title="TORSH Design System"
 						thumbnailAssetSrc={TorshDesignSystemCaseStudyVideo}
@@ -55,6 +79,10 @@ import Footer from '../components/Footer.astro';
 						ctaUrl="https://nolatransit.fly.dev/"
 					/>
 				</div>
+			</section>
+			<section>
+				<RecordCollection />
+				<p>I love using</p>
 			</section>
 		</main>
 		<Footer />
