--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -40,6 +40,24 @@ button {
     }
 }
 
+.btn-ghost {
+    background-color: transparent;
+    color: var(--color-black);
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    transition: all 0.2s;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 800;
+    text-decoration: none;
+    text-align: center;
+    &:hover {
+        color: var(--color-white);
+        background-color: var(--color-black);
+        transition: all 0.2s;
+    }
+}
+
 .button-group {
     display: flex;
     gap: 0.5rem;
